CDM_UI_Backend/server.log
/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/pydantic/_internal/_config.py:373: UserWarning: Valid config keys have changed in V2:
* 'allow_population_by_field_name' has been renamed to 'validate_by_name'
  warnings.warn(message, UserWarning)
Traceback (most recent call last):
  File "/Users/romikapoor/CDM Screens/CDM_UI_Backend/main.py", line 6, in <module>
    from routes import objects, drivers, variables, graph, lists, order
  File "/Users/romikapoor/CDM Screens/CDM_UI_Backend/routes/lists.py", line 1226
    "is_meme": getattr(list_data, 'isMeme', False) or False
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
